# fipper

./: $  .gitignore  .gitmodules  3  CMakeLists.txt
lib/: CMakeLists.txt
lib/include/fp/: core.hpp  deserializer.hpp  endpoint.hpp  endpoint.inl  errorStack.hpp  header.hpp  httpCode.hpp  httpMethod.hpp  jobScheduler.hpp  main.hpp  request.hpp  request.inl  response.hpp  result.hpp  routeString.hpp  routeString.inl  serializer.hpp  server.hpp  server.inl  socket.hpp  test.hpp
lib/include/fp/containers/: stackBasedRollingQueue.hpp  stackBasedRollingQueue.inl
lib/include/fp/coroutines/: async.hpp  async.inl  awaiter.hpp  awaiter.inl  promise.hpp  task.hpp
lib/include/fp/utils/: benchmark.hpp  constexprMap.hpp  enums.hpp  enums.inl  hash.hpp  hash.inl  janitor.hpp  macros.hpp  traits.hpp
lib/src/: deserialier.cpp  errorStack.cpp  header.cpp  httpCode.cpp  jobScheduler.cpp  serializer.cpp  server.cpp  socket.cpp  test.cpp
loader/: CMakeLists.txt
loader/src/: loader.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
scripts/python/generator/: macro_var_to_seq.py  traits_aggregate_reflection.py
